package Shapes;

public interface Operations {
    double getArea();
    double getPerimeter();
}
