@startuml

title __DAP-PRACTICA01's Class Diagram__\n

  namespace practica01 {
    class practica01.Main {
    }
  }
  

  namespace practica01 {
    namespace Shapes {
      class practica01.Shapes.Circle {
      }
    }
  }
  

  namespace practica01 {
    namespace Shapes {
      interface practica01.Shapes.Operations {
      }
    }
  }
  

  namespace practica01 {
    namespace Shapes {
      class practica01.Shapes.Rectangle {
      }
    }
  }
  

  namespace practica01 {
    namespace Shapes {
      abstract class practica01.Shapes.Shape {
      }
    }
  }
  

  namespace practica01 {
    namespace Shapes {
      class practica01.Shapes.Triangle {
      }
    }
  }
  

  practica01.Shapes.Circle -up-|> practica01.Shapes.Shape
  practica01.Shapes.Rectangle -up-|> practica01.Shapes.Shape
  practica01.Shapes.Shape .up.|> practica01.Shapes.Operations
  practica01.Shapes.Triangle -up-|> practica01.Shapes.Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
